fixed javascript bug in my net - 847yt874ef

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -248,6 +248,8 @@ a:hover{color:$hover-color;}
 
 
 
+
+
 /*
  * jQuery contextMenu - Plugin for simple contextMenu handling
  *
@@ -330,7 +332,7 @@ a:hover{color:$hover-color;}
     In case you want to use sprites for icons (which I would suggest you do) have a look at
     http://css-tricks.com/13224-pseudo-spriting/ to get an idea of how to implement 
     .context-menu-item.icon:before {}
- */
+ *
 .context-menu-item.icon { min-height: 18px; background-repeat: no-repeat; background-position: 4px 2px; }
 .context-menu-item.icon-edit { background-image: url(images/page_white_edit.png); }
 .context-menu-item.icon-cut { background-image: url(images/cut.png); }
@@ -338,6 +340,7 @@ a:hover{color:$hover-color;}
 .context-menu-item.icon-paste { background-image: url(images/page_white_paste.png); }
 .context-menu-item.icon-delete { background-image: url(images/page_white_delete.png); }
 .context-menu-item.icon-quit { background-image: url(images/door.png); }
+*/
 
 /* vertically align inside labels */
 .context-menu-input > label > * { vertical-align: top; }
