--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -555,6 +555,10 @@ a:hover {
     background-color: rgba(0, 51, 119, 0.2); }
   #main-container pre {
     text-align: justify; }
+  #main-container .net_tags li {
+    padding: 0.3em; }
+  #main-container .net_tags .hide_me {
+    display: none; }
   #main-container .create_post {
     width: 80%; }
     #main-container .create_post fieldset {
@@ -772,30 +776,15 @@ a:hover {
     In case you want to use sprites for icons (which I would suggest you do) have a look at
     http://css-tricks.com/13224-pseudo-spriting/ to get an idea of how to implement 
     .context-menu-item.icon:before {}
- */
-.context-menu-item.icon {
-  min-height: 18px;
-  background-repeat: no-repeat;
-  background-position: 4px 2px; }
-
-.context-menu-item.icon-edit {
-  background-image: url(images/page_white_edit.png); }
-
-.context-menu-item.icon-cut {
-  background-image: url(images/cut.png); }
-
-.context-menu-item.icon-copy {
-  background-image: url(images/page_white_copy.png); }
-
-.context-menu-item.icon-paste {
-  background-image: url(images/page_white_paste.png); }
-
-.context-menu-item.icon-delete {
-  background-image: url(images/page_white_delete.png); }
-
-.context-menu-item.icon-quit {
-  background-image: url(images/door.png); }
-
+ *
+.context-menu-item.icon { min-height: 18px; background-repeat: no-repeat; background-position: 4px 2px; }
+.context-menu-item.icon-edit { background-image: url(images/page_white_edit.png); }
+.context-menu-item.icon-cut { background-image: url(images/cut.png); }
+.context-menu-item.icon-copy { background-image: url(images/page_white_copy.png); }
+.context-menu-item.icon-paste { background-image: url(images/page_white_paste.png); }
+.context-menu-item.icon-delete { background-image: url(images/page_white_delete.png); }
+.context-menu-item.icon-quit { background-image: url(images/door.png); }
+*/
 /* vertically align inside labels */
 .context-menu-input > label > * {
   vertical-align: top; }
