--- a/views/board.haml
+++ b/views/board.haml
@@ -57,11 +57,11 @@
                     - if @login_option
                         .login_form= haml(:'partials/_login_form', :layout => false)
                     %h3 Other info
-                    %br/
-                    %ul
-                        %li What
-                        %li to
-                        %li put
-                        %li here?
+                    / %br/
+                    /  %ul
+                    /      %li What
+                    /      %li to
+                    /      %li put
+                    /      %li here?
 
 = haml(:'partials/_footer', :layout => false)
