--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -162,26 +162,27 @@ a:hover{color:$hover-color;}
 #main-container{position:relative;top:$top-space+50px;padding-bottom:$top-space;
 	.column{vertical-align:top;margin-bottom:8px;height:100%;background-color:$tr-blu;padding:1em;border-radius:0.2em;}
     ul{list-style:none;}
-    .user_image{float:left;}
+//    .user_image{float:left;}
     h3{float:left;}
-    .box{padding:2px;margin:1px;border:1px dotted $tr-br-blu;}
+    .bio{background-color:$tr-blu;}
+    .box{padding:2px;margin:1px;min-width:80%;}
     .feed_item{background-color:$tr-blu;}
     pre{text-align:justify;}
 	.net_tags{
-		li{padding:0.3em;}
+		li{padding:0.5em;}
 		.hide_me{display:none;}
 	}
     .create_post{width:80%;
         fieldset{background-color:$tr-blu; border-radius:0.5em;}
         ul{position:relative;left:-2em;}
-        li{float:left;list-style:none;margin:0.3em 1em;text-align:left;width:3.8em;height:2em;border:1px dotted $tr-blu;}
+        li{float:left;list-style:none;padding:0.5em;margin:0.4em 0.5em;text-align:left;min-width:4em;height:2em;border:1px dotted $tr-br-blu;font-size:11pt;background-color:$tr-blu;}
         @media screen and (max-width : 499px) {textarea{width:180px;}}
         @media screen and (min-width : 500px) and (max-width : 760px) {textarea{width:210px;height:60px;}}
         @media screen and (min-width : 761px) and (max-width : 949px) {textarea{width:300px;height:80px;}}
         @media screen and (min-width : 950px) {textarea{width:400px;height:40px;}}
     }
 
-    @media screen and (max-width : 499px) { #left{display:block;} img.user_image{float:left;width:5em;}}
+    @media screen and (max-width : 499px) { #left{display:block;} img.user_image{width:5em;} }
     @media screen and (min-width : 500px) and (max-width : 760px) { #left{float:left;width:21%;display:inline-block;} }
     @media screen and (min-width : 761px) { #left{float:left;width:14%;margin-left:6px;display:inline-block;} }
 
