--- a/views/index.haml
+++ b/views/index.haml
@@ -7,19 +7,7 @@
         %h2{:style => "margin:6px auto 10px auto;"}
         
         = haml(:'partials/_login_form', :layout => false)
-                
-        %form.ib{:name => "signup_form", :action => "/signup", :method => "post"}
-            %fieldset
-                %legend Sign Up:
-                Username: 
-                %input{:type => "text", :name => "name", :size => "10", style:"margin:5px;"}/
-                %br/
-                E-mail:
-                %input{:type => "text", :name => "email", :size => "10", style:"margin:5px;"}/
-                %br/
-                Password:
-                %input{:type => "password", :name => "pass", :size => "10", style:"margin:5px;"}/
-                %br/
-                %input.btn.r4{:type => "submit", :value => "Submit", style:"margin:5px;"}/
+        
+        = haml(:'partials/_signup_form', :layout => false)
 
 = haml(:'partials/_footer', :layout => false)
