--- a/views/net.haml
+++ b/views/net.haml
@@ -8,12 +8,12 @@
         .net_tags{style: "position: absolute;"}
             -# .ib= "you has: #{@tags.inspect}"
             %form.ib{:name => "tags_form", :action => "/#{@user.name}/tags", :method => "post"}
-                %fieldset{style: "border:1px solid black;padding:0.5em 2em;"}
-                    %legend.save.hide_me{style: "font-size:13pt;"} Pending tags:
+                %fieldset{style: "padding:0.5em 2em;"}
+                    %legend.save.hide_me{style: "font-size:12pt;"} Pending tags:
                     %input{:type => "hidden", :name => "pass", value: "#{session[:pass]}"}/
                     %input{:type => "hidden", :name => "name", value: "#{session[:name]}"}/
                     %ul
-                    %input.btn.r4.save.hide_me{:type => "submit", :value => "Save (dummy btn)", style:"margin:5px;"}/
+                    %input.btn.r4.save.hide_me{:type => "submit", :value => "Save!", style:"margin:5px;"}/
         %center
             = haml :'partials/_img_map'
             %img#net{src: "img/net-1.png", usemap: "#net_map"}
