--- a/views/users/_info.haml
+++ b/views/users/_info.haml
@@ -1,27 +1,28 @@
 %h2= @user.name.capitalize
 %br/
 %br/
-%img.user_image{src: "img/blank-user.gif"}
+%center
+    %img.user_image{src: "img/blank-user.gif"}
 
 .box.ib
-    %h3.b User bio:
-    %h4="Member since #{@user.created_at}."
+    %p="Member since \n#{@user.created_at}"
     %br/
-    %p= @user.bio
+    %h3.b User bio:
+    %p.bio.r4= @user.bio
     
 .box.ib
+    %p (class of 2014)
     %h4.b Courses:
     %ul
-        %li Math 2A
+        %li Math 1A
         %li Physics 99Z
-    %h6 (class of 2014)
 
-.box.ib
-    %h4.b Interests:
-    %ul
-        %li soccer
-        %li dancing
-        %li travel
+/ .box.ib
+/     %h4.b Interests:
+/     %ul
+/         %li soccer
+/         %li dancing
+/         %li travel
 
 / .box.ib
 /     %h4 My net
