style updates - 9485t298fh4ruhq2f

--- a/views/partials/_nav.haml
+++ b/views/partials/_nav.haml
@@ -10,7 +10,7 @@
                     All Boards
         %li
             %center
-                .all_my My:
+                / .all_my My:
                 %a.posts{:href => "/#{@user.name}/posts"}
                     .my My
                     Posts
