--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -346,12 +346,10 @@ a:hover {
   position: fixed;
   z-index: 98;
   top: 70px;
-  background-color: #337799;
+  background-color: rgba(51, 119, 153, 0.3);
   border-bottom: 1px solid #265973; }
   #nav-container ul {
-    display: block;
-    position: relative;
-    left: 5px; }
+    display: block; }
     #nav-container ul li {
       display: inline-block;
       list-style: none; }
@@ -382,44 +380,27 @@ a:hover {
       #nav-container ul .prefs a.p2 {
         position: relative; }
 
-@media only screen and (-webkit-min-device-pixel-ratio : 1.9), only screen and (min-device-pixel-ratio : 1.9) {
-  li {
-    margin: 0 0.1em; }
-
-  .prefs {
-    display: inline-block;
-    position: relative;
-    right: -0.5em; }
-
-  a {
-    border-radius: 2px;
-    border-bottom: 0;
-    border-top: 0;
-    margin: 0;
-    padding: 0.25em 0.15em; } }
-@media only screen and (min-device-width : 761px) and (max-device-width : 1280px) and (orientation : landscape) {
-  li.login {
-    float: right;
-    display: inline;
-    margin-right: 0.5em; } }
 @media screen and (max-width : 499px) {
   #nav-container {
     top: 35px; }
+    #nav-container ul {
+      position: relative;
+      left: -2em; }
     #nav-container li {
-      margin: 0 0.3em; }
+      margin: 0 0.2em; }
       #nav-container li a {
         border-radius: 2px;
         border-bottom: 0;
         border-top: 0;
         margin: 0;
-        padding: 0.35em 0.25em; }
+        padding: 0.5em 0.4em; }
       #nav-container li .my {
         display: none; }
       #nav-container li .all_my {
         font-size: 11pt;
         display: inline-block;
         position: absolute;
-        left: -1.8em;
+        left: -2.8em;
         top: 0.2em;
         color: #ddd; }
       #nav-container li a.icon {
@@ -435,28 +416,30 @@ a:hover {
         display: none; }
     #nav-container li.login {
       float: right;
-      margin-right: 0.1em;
-      display: inline; }
+      margin-right: -0.3em;
+      display: inline;
+      width: 100px; }
     #nav-container .prefs {
       display: inline-block;
-      width: 13em; }
+      width: 13em;
+      margin-left: -3em; }
       #nav-container .prefs a {
         width: 30%;
         margin: 0;
         border-radius: 0; }
       #nav-container .prefs a.p1 {
         position: relative;
-        padding: 0.35em 0.25em 0.35em 0.25em;
+        padding: 0.5em 0.5em;
         position: relative; }
       #nav-container .prefs a.p2 {
         position: relative;
-        left: -1.2em;
-        padding: 0.35em 0.25em 0.35em 0.15em; } }
+        left: -1em;
+        padding: 0.5em 0.25em 0.5em 0.25em; } }
 @media screen and (min-width : 500px) and (max-width : 760px) {
   #nav-container {
     top: 35px; }
     #nav-container li {
-      margin: 0 0.5em; }
+      margin: 0 0.2em; }
       #nav-container li a {
         font-size: 14pt;
         border-radius: 2px;
@@ -481,7 +464,7 @@ a:hover {
         display: none; }
     #nav-container li.login {
       float: right;
-      margin-right: 1em;
+      margin-right: 0.8em;
       display: inline; }
     #nav-container .prefs {
       display: inline-block;
@@ -498,38 +481,36 @@ a:hover {
         left: -1em;
         padding: 0.7em 0.5em 0.7em 0.3em; } }
 @media screen and (min-width : 761px) {
-  #nav-container {
-    background-color: rgba(51, 119, 153, 0.3); }
-    #nav-container ul {
-      left: -10px; }
-      #nav-container ul li {
-        margin: 0.1em 0.5em;
+  #nav-container ul {
+    left: -10px; }
+    #nav-container ul li {
+      margin: 0.1em 0.5em;
+      padding: 0.5em; }
+      #nav-container ul li a {
+        font-size: 11pt;
+        border-radius: 4px;
+        margin: 0 0.2em;
         padding: 0.5em; }
-        #nav-container ul li a {
-          font-size: 11pt;
-          border-radius: 4px;
-          margin: 0 0.2em;
-          padding: 0.5em; }
-        #nav-container ul li .my {
-          display: inline; }
-        #nav-container ul li .all_my {
-          display: none; }
-        #nav-container ul li .log_my {
-          display: none; }
-      #nav-container ul li.login {
-        float: right;
-        margin-right: 1.5em;
+      #nav-container ul li .my {
         display: inline; }
-      #nav-container ul .prefs {
-        width: 15em; }
-        #nav-container ul .prefs a {
-          padding: 0.5em;
-          width: 40%; }
-        #nav-container ul .prefs a.p1 {
-          border-radius: 0.3em 0 0 0.3em; }
-        #nav-container ul .prefs a.p2 {
-          padding-left: 0;
-          border-radius: 0 0.3em 0.3em 0; } }
+      #nav-container ul li .all_my {
+        display: none; }
+      #nav-container ul li .log_my {
+        display: none; }
+    #nav-container ul li.login {
+      float: right;
+      margin-right: 4em;
+      display: inline; }
+    #nav-container ul .prefs {
+      width: 15em; }
+      #nav-container ul .prefs a {
+        padding: 0.5em;
+        width: 40%; }
+      #nav-container ul .prefs a.p1 {
+        border-radius: 0.3em 0 0 0.3em; }
+      #nav-container ul .prefs a.p2 {
+        padding-left: 0;
+        border-radius: 0 0.3em 0.3em 0; } }
 #main-container {
   position: relative;
   top: 120px;
@@ -725,8 +706,8 @@ a:hover {
 .context-menu-list {
   margin: 0;
   padding: 0;
-  min-width: 120px;
-  max-width: 250px;
+  min-width: 80px;
+  max-width: 300px;
   display: inline-block;
   position: absolute;
   list-style-type: none;
@@ -738,14 +719,21 @@ a:hover {
   -o-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
   font-family: Verdana, Arial, Helvetica, sans-serif;
-  font-size: 11px; }
+  font-size: 10pt; }
 
 .context-menu-item {
-  padding: 2px 2px 2px 24px;
+  padding: 2px 2px 2px 4px;
   background-color: #EEE;
   position: relative;
-  -moz-user-select: -moz-none; }
+  -moz-user-select: -moz-none;
+  border-bottom: 1px solid #DDD; }
 
+@media screen and (max-width : 499px) {
+  .context-menu-list {
+    font-size: 13pt; }
+
+  .context-menu-item {
+    padding: 1em; } }
 .context-menu-separator {
   padding-bottom: 0;
   border-bottom: 1px solid #DDD; }
@@ -773,20 +761,6 @@ a:hover {
   right: 3px;
   z-index: 1; }
 
-/* icons
-    #protip:
-    In case you want to use sprites for icons (which I would suggest you do) have a look at
-    http://css-tricks.com/13224-pseudo-spriting/ to get an idea of how to implement 
-    .context-menu-item.icon:before {}
- *
-.context-menu-item.icon { min-height: 18px; background-repeat: no-repeat; background-position: 4px 2px; }
-.context-menu-item.icon-edit { background-image: url(images/page_white_edit.png); }
-.context-menu-item.icon-cut { background-image: url(images/cut.png); }
-.context-menu-item.icon-copy { background-image: url(images/page_white_copy.png); }
-.context-menu-item.icon-paste { background-image: url(images/page_white_paste.png); }
-.context-menu-item.icon-delete { background-image: url(images/page_white_delete.png); }
-.context-menu-item.icon-quit { background-image: url(images/door.png); }
-*/
 /* vertically align inside labels */
 .context-menu-input > label > * {
   vertical-align: top; }
