--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -73,8 +73,8 @@ a:hover{color:$hover-color;}
 
 
 
-#nav-container{position:fixed;z-index:98;top:$top-space;background-color:$bl-red;border-bottom:1px solid darken($bl-red, 10%);
-    ul{display:block;position:relative;left:5px;
+#nav-container{position:fixed;z-index:98;top:$top-space;background-color:$tr-bl-red;border-bottom:1px solid darken($bl-red, 10%);
+    ul{display:block;
         li{display:inline-block;list-style:none;
 			a{display:inline-block;height:100%;width:100%;border:1px solid darken($bl-red, 20%);font-size:10pt;background-color:$bl-red;}
 			a:hover{background:#68a;}
@@ -87,40 +87,36 @@ a:hover{color:$hover-color;}
 		}
     }
 }
-@media screen and (max-width : 499px) {}
-@media only screen and (-webkit-min-device-pixel-ratio : 1.9), only screen and (min-device-pixel-ratio : 1.9) {
-    li{margin:0 0.1em;}
-    .prefs{display:inline-block;position:relative;right:-0.5em;}
-    a{border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:0.25em 0.15em;}
-}
 @media screen and (min-width : 500px) and (max-width : 760px) {}
 @media screen and (min-width : 761px) and (max-width : 1280px) {}
-@media only screen and (min-device-width : 761px) and (max-device-width : 1280px) and (orientation : landscape) {li.login{float:right;display:inline;margin-right:0.5em;}}
+@media only screen and (min-device-width : 761px) and (max-device-width : 1280px) and (orientation : landscape) {}
 @media only screen and (min-device-width : 761px) and (max-device-width : 1280px) and (orientation : portrait) {}
 @media screen and (min-width : 1281px) {}
 
+@media only screen and (-webkit-min-device-pixel-ratio : 1.9), only screen and (min-device-pixel-ratio : 1.9) {}
 @media screen and (max-width : 499px) {
 	#nav-container{top:$top-space - 35px;
-    	li{margin:0 0.3em;
-    	    a{border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:0.35em 0.25em;}
+	    ul{position:relative;left:-2em;}
+    	li{margin:0 0.2em;
+    	    a{border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:0.5em 0.4em;}
     	    .my{display:none;}
-    	    .all_my{font-size:11pt;display:inline-block;position:absolute;left:-1.8em;top:0.2em;color:#ddd;}
+    	    .all_my{font-size:11pt;display:inline-block;position:absolute;left:-2.8em;top:0.2em;color:#ddd;}
     	    a.icon{display:inline-block;position:relative;top:-0.1em;
     	        img{width:1.8em;height:1.8em;position:relative;top:0;}
     	    }
             a.wrd{display:none;}
     	}
-        li.login{float:right;margin-right:0.1em;display:inline;}
-        .prefs{display:inline-block;width:13em;
+        li.login{float:right;margin-right:-0.3em;display:inline;width:100px;}
+        .prefs{display:inline-block;width:13em;margin-left:-3em;
 		    a{width:30%;margin:0;border-radius:0;}
-		    a.p1{position:relative;padding:0.35em 0.25em 0.35em 0.25em;position:relative;}
-		    a.p2{position:relative;left:-1.2em;padding:0.35em 0.25em 0.35em 0.15em;}
+		    a.p1{position:relative;padding:0.5em 0.5em;position:relative;}
+		    a.p2{position:relative;left:-1em;padding:0.5em 0.25em 0.5em 0.25em;}
 		}
     }
 }
 @media screen and (min-width : 500px) and (max-width : 760px) {
 	#nav-container{top:$top-space - 35px;
-        li{margin:0 0.5em;
+        li{margin:0 0.2em;
             a{font-size:14pt;border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:0.7em 0.5em;}
             .my{display:inline;}
             .all_my{display:none;}
@@ -129,7 +125,7 @@ a:hover{color:$hover-color;}
             }
             a.wrd{display:none;}
         }
-        li.login{float:right;margin-right:1em;display:inline;}
+        li.login{float:right;margin-right:0.8em;display:inline;}
         .prefs{display:inline-block;width:13em;
 		    a{width:30%;margin:0;}
 		    a.p1{position:relative;padding:0.7em 0.5em 0.7em 0.5em;position:relative;}
@@ -138,7 +134,7 @@ a:hover{color:$hover-color;}
     }
 }
 @media screen and (min-width : 761px) {
-    #nav-container{background-color:$tr-bl-red;
+    #nav-container{
         ul{left:-10px;
             li{margin:0.1em 0.5em;padding:0.5em;
                 a{font-size:11pt;border-radius:4px;margin:0 0.2em;padding:0.5em;}
@@ -146,7 +142,7 @@ a:hover{color:$hover-color;}
                 .all_my{display:none;}
                 .log_my{display:none;}
             }
-            li.login{float:right;margin-right:1.5em;display:inline;}
+            li.login{float:right;margin-right:4em;display:inline;}
             .prefs{width:15em;
     		    a{padding:0.5em;width:40%;}
     		    a.p1{border-radius:0.3em 0 0 0.3em;}
@@ -273,8 +269,9 @@ a:hover{color:$hover-color;}
     margin:0; 
     padding:0;
     
-    min-width: 120px;
-    max-width: 250px;
+    min-width: 80px;
+    max-width: 300px;
+    
     display: inline-block;
     position: absolute;
     list-style-type: none;
@@ -289,14 +286,19 @@ a:hover{color:$hover-color;}
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
     
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 11px;
+    font-size: 10pt;
 }
 
 .context-menu-item {
-    padding: 2px 2px 2px 24px;
+    padding: 2px 2px 2px 4px;
     background-color: #EEE;
     position: relative;
     -moz-user-select: -moz-none;
+    border-bottom: 1px solid #DDD;
+}
+@media screen and (max-width : 499px) {
+    .context-menu-list {font-size: 13pt;}
+    .context-menu-item {padding:1em;}
 }
 
 .context-menu-separator {
@@ -331,21 +333,6 @@ a:hover{color:$hover-color;}
     right: 3px;
     z-index: 1;
 }
-
-/* icons
-    #protip:
-    In case you want to use sprites for icons (which I would suggest you do) have a look at
-    http://css-tricks.com/13224-pseudo-spriting/ to get an idea of how to implement 
-    .context-menu-item.icon:before {}
- *
-.context-menu-item.icon { min-height: 18px; background-repeat: no-repeat; background-position: 4px 2px; }
-.context-menu-item.icon-edit { background-image: url(images/page_white_edit.png); }
-.context-menu-item.icon-cut { background-image: url(images/cut.png); }
-.context-menu-item.icon-copy { background-image: url(images/page_white_copy.png); }
-.context-menu-item.icon-paste { background-image: url(images/page_white_paste.png); }
-.context-menu-item.icon-delete { background-image: url(images/page_white_delete.png); }
-.context-menu-item.icon-quit { background-image: url(images/door.png); }
-*/
 
 /* vertically align inside labels */
 .context-menu-input > label > * { vertical-align: top; }
