--- a/views/partials/_login_form.haml
+++ b/views/partials/_login_form.haml
@@ -2,9 +2,9 @@
     %fieldset
         %legend Log In:
         %label{:for => "username"} Username
-        %input#username{:type => "text", :name => "name", :size => "10", style:"margin:5px;"}/
+        %input#username.txt{:type => "text", :name => "name", :size => "10", style:"margin:5px;"}/
         %br/
         %label{:for => "passwd"} Password
-        %input#passwd{:type => "password", :name => "pass", :size => "10", style:"margin:5px;"}/
+        %input#passwd.txt{:type => "password", :name => "pass", :size => "10", style:"margin:5px;"}/
         %br/
         %input.btn.r4{:type => "submit", :value => "Submit", style:"margin:5px;"}/
