--- a/views/partials/_header.haml
+++ b/views/partials/_header.haml
@@ -12,5 +12,5 @@
             - color = "green"
         - else
             - color = "red"
-        %p{style: "color:black;position:relative;top:3em;background-color:#{color};margin:0 auto;width:20em;"}= session[:stat][:msg]
+        %p.status{style: "color:black;position:relative;top:3em;background-color:#{color};margin:0 auto;width:20em;"}= session[:stat][:msg]
         - session[:stat] = nil
