--- a/views/home.haml
+++ b/views/home.haml
@@ -29,7 +29,7 @@
                                             - i = 0
                                             - @tags.each do |tag|
                                                 - i += 1
-                                                %li.r4
+                                                %li.tag_check.r4
                                                     %input{type: "checkbox", name: "tag[#{i}]", id: "tag_#{i}", value: "#{tag.name}"}= "#{tag.name}"
                                                 
                                 %br/
