--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -23,7 +23,7 @@ $top-space: 70px;
 
 
 
-body{background-color:$lt-blu;}
+body{background-color:$dk-blu;}
 #splash{position:relative;width:60%;min-height:80px;max-height:50%;margin-left:auto;margin-right:auto;border:1px solid $tr-br-blu;background-color:$tr-blu;padding:8px;text-align:center;
     form{margin:5px 10px;vertical-align:top;}
     fieldset{border:1px solid $tr-br-blu;padding:5px;background-color:$tr-blu;}
